[package]
name = "tokio_multi"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "tokio_libp2p-example"
path = "src/bin/tokio_libp2p-example.rs"
[[bin]]
name = "tokio_multi"
path = "src/bin/tokio_multi.rs"

[[example]]
name = "echo"
path = "src/bin/echo.rs"

[[example]]
name = "simple"
path = "src/bin/simple.rs"

[dependencies]
##tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "full"] }
clap = { version = "4.5.6", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
futures = { version = "0.3.30" }
libp2p = { version = "0.54.1", features = ["tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic", "tls", "kad", "identify",
"cbor", "request-response", "dns"] }
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] } 
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
